# Fjord

./: .gitignore  CLAUDE.md  Cargo.toml  JELLYFIN.md  PKGBUILD  PLAN.md  README.md  RUST_SPLIT.md  SEERR.md  SLINT.md  SLINT_SPLIT.md  fjord.install
.claude/: settings.json
crates/fjord-api/: Cargo.toml
crates/fjord-api/src/: auth.rs  client.rs  lib.rs  models.rs
crates/fjord-api/src/models/: auth.rs  intro.rs  media.rs  mod.rs  system.rs
crates/fjord-app/: Cargo.toml  build.rs
crates/fjord-app/src/: album.rs  artist.rs  auth.rs  browse.rs  collection.rs  config.rs  context_menu.rs  controls.rs  detail.rs  discover.rs  home.rs  keys.rs  main.rs  movies.rs  person.rs  pipewire_fix.rs  playback.rs  poster.rs  prewarm.rs  season.rs  secrets.rs  seerr_auth.rs  series.rs  settings.rs  stats.rs  ws.rs
crates/fjord-app/ui/: album.slint  app_state.slint  artist.slint  browse.slint  calendar.slint  collection.slint  connect.slint  connect_seerr.slint  context_menu.slint  detail.slint  discover.slint  home.slint  layout.slint  login.slint  main.slint  now_playing.slint  person.slint  player.slint  request_detail.slint  season.slint  series.slint  settings.slint  theme.slint  widgets.slint
crates/fjord-player/: Cargo.toml
crates/fjord-player/src/: lib.rs  mpv.rs
crates/fjord-seerr/: Cargo.toml
crates/fjord-seerr/src/: client.rs  lib.rs  models.rs
pkg/: fjord-x11.desktop  fjord.desktop
