[workspace]
members = [
    "crates/fjord-app",
    "crates/fjord-api",
    "crates/fjord-player",
]
resolver = "2"

[profile.release]
debug = 1  # line-level symbols for crash backtraces; removed after crash is identified

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KalasKonrad"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + serialization for Jellyfin API
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# GUI
slint = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Shared between crates
url = { version = "2", features = ["serde"] }
