[workspace]
members = [
    "crates/fjord-app",
    "crates/fjord-api",
    "crates/fjord-player",
    "crates/fjord-seerr",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KalasKonrad"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + serialization for Jellyfin API
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# GUI
slint = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Shared between crates
url = { version = "2", features = ["serde"] }

# Secret-at-rest encryption (config.rs token/Seerr fields) — pure-Rust, no
# system crypto library dependency, keeps `cargo build --locked` simple on the HTPC
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
