[package]
name = "fjord-api"
version.workspace = true
edition = "2021"
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
