[package]
name = "fjord-app"
version.workspace = true
edition = "2021"
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
slint.workspace = true
gl = "0.14"
euclid = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
chrono.workspace = true
tokio-tungstenite = "0.24"
futures-util = "0.3"
fjord-api = { path = "../fjord-api" }
fjord-player = { path = "../fjord-player" }

[build-dependencies]
slint-build = "1"
